# esp-tflite-micro-keyword-spotting

./: .gitignore  CMakeLists.txt  README.md  command.txt  devCost.xlsx  mfcc_esp.txt  sdkconfig  sdkconfig.old
components/INMP441/: CMakeLists.txt
components/INMP441/include/: INMP441.h
components/INMP441/src/: INMP441.c
components/mfcc/: CMakeLists.txt.backup
components/mfcc/include/: mfcc_user.h
components/mfcc/kissfft/: CMakeLists.txt.backup  kiss_fft.h
components/mfcc/porting/include/: fft.h
components/mfcc/src/: mfcc_user.c
components/mfcc_sr/: CMakeLists.txt
components/mfcc_sr/include/: mfcc_sr.h
components/mfcc_sr/src/: mfcc_sr.c
components/tflite_model/: CMakeLists.txt  model.tflite
components/tflite_model/include/: tflite_model.h  tflite_model_shared.h
components/tflite_model/src/: tflite_model.cc
components/webSocketClient_user/: CMakeLists.txt
components/webSocketClient_user/include/: webSocketClient_user.h
components/webSocketClient_user/src/: webSocketClient_user.c
components/wifi_user/: CMakeLists.txt
components/wifi_user/include/: wifi_user.h
components/wifi_user/src/: wifi_user.c
host_training/: manage_audio.py  model.py  split_background.py  train.py
host_training/model/: model.pt
host_training/tensorflow_model/: checkfile.py  convert_tflite.py  inference.py  model.py  pcm_output.txt  train.py
host_training/tensorflow_model/best_quantized_model/: keras_metadata.pb  saved_model.pb
main/: CMakeLists.txt  Kconfig  idf_component.yml
main/include/: inference_buffer.h  main_app.h
main/src/: main.cpp
(+4 files in other folders)
